Round 3. Added files again. Seems to be working this time with these settings... empty project here so no pre-existing junk. Yay!

--- a/Bowdoin Tour Guide/Bowdoin Tour Guide-Info.plist
+++ b/Bowdoin Tour Guide/Bowdoin Tour Guide-Info.plist
@@ -43,5 +43,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIMainStoryboardFile</key>
+	<string>MainStoryboard_iPhone</string>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>MainStoryboard_iPad</string>
 </dict>
 </plist>
