--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 #xcode stuff
-Bowdoin Tour Guide.xcodeproj/*
-*/.DS_Store
+Bowdoin Tour Guide.xcodeproj/project.xcworkspace/*
+Bowdoin Tour Guide.xcodeproj/xcuserdata/*
